# Template-bootcamp

./: README.md  create_challenge.sh  pyproject.toml
docs/: setup.md
projetos/desafio_01/: README.md  requirements.txt
projetos/desafio_01/src/: main.py
projetos/desafio_XX/: README.md
